-패키지 구조 변경 -schedule-context.xml 불필요하여 제거 => java config 방식으로 변경.

--- a/src/main/resources/config/properties/config-quartz.properties
+++ b/src/main/resources/config/properties/config-quartz.properties
@@ -51,4 +51,4 @@ org.quartz.dataSource.myDS.maxConnections=30
 #============================================================================ 
 # Configure Listeners 
 #============================================================================
-org.quartz.jobListener.NAME.class=com.hiair.app.schedule.MyJobListener
+org.quartz.jobListener.NAME.class=com.hiair.app.scheduler.listener.MyJobListener
