--- a/src/main/resources/config/properties/config-quartz.properties
+++ b/src/main/resources/config/properties/config-quartz.properties
@@ -51,4 +51,4 @@ org.quartz.dataSource.myDS.maxConnections=30
 #============================================================================ 
 # Configure Listeners 
 #============================================================================
-org.quartz.jobListener.NAME.class=com.hiair.app.scheduler.listener.MyJobListener
+org.quartz.jobListener.NAME.class=com.hiair.app.scheduler.sys.listener.MyJobListener
